public/styles/blog.styl
#blog
    width 640px
    margin 0 auto
    padding 20px 0
    color var(--title)

    @media screen and (max-width 768px)
        &
            width 100%
            padding 20px 5%

.h1,
.h2
    position relative
    display block
    font-size 36px
    font-weight 400
    margin 20px 0 0 0
    font-weight 700
    overflow auto

    &::before
        position absolute
        content ""
        display block
        top 24px
        left -48px
        width 6px
        height 6px
        opacity .75
        background-color var(--primary)
        border-radius 3px
        box-shadow 0 0 0 12px var(--primary-overlay)

.h2
    font-size 28px

    &::before
        top 20px
        background-color var(--success)
        box-shadow 0 0 0 12px var(--success-overlay)

.p
    display block
    font-size 19px
    font-weight 400
    margin 24px 0
    line-height 1.75em

.a
    font-size 19px
    color var(--link)
    padding 2px 6px
    border-radius 4px
    text-decoration none

    &:hover,
    &:focus
        background-color var(--link-overlay)

.pre
    position relative

.p > code
    display inline
    color var(--success)
    padding 2px 4px
    font-weight 700
    border-radius 4px
    background-color var(--success-overlay)

.list
    font-size 19px
    color var(--title)
    line-height 1.85em

